test/files/neg/t7171.check
t7171.scala:2: warning: The outer reference in this type test cannot be checked at run time.
  final case class A()
                   ^
t7171.scala:9: warning: The outer reference in this type test cannot be checked at run time.
    case _: A => true; case _ => false
          ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
